<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_by_date"
        android:title="@string/date"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_by_up_votes_ascending"
        android:title="@string/up_votes_ascending"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_by_up_votes_descending"
        android:title="@string/up_votes_descending"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_by_down_votes_ascending"
        android:title="@string/down_votes_ascending"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_by_down_votes_descending"
        android:title="@string/down_votes_descending"
        app:showAsAction="never"/>
</menu>